--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,47 @@
     margin:0;
     padding:0;
 }
+
+html {
+    font-size: 62.5%;
+    box-sizing: border-box;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+}
+
+#header {
+    position: fixed;
+    width: 100%;
+    display:flex;
+    background-color: transparent;
+    border-bottom:1px solid black;
+    justify-content: flex-end;
+}
+
+#nav-bar {
+    width: 40%;
+   
+    
+}
+
+#nav-bar ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 1rem;
+    list-style-type: none;
+}
+
+#nav-bar ul a {
+    text-decoration: none;
+    color: rgb(64, 66, 224);
+    font-size: 2rem;
+
+}
+
+.section {
+    height: 100vh;
+}
