--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 *, ::before, ::after {
     margin:0;
     padding:0;
@@ -6,11 +8,13 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+    font-family: 'Roboto Mono', monospace;
 }
 
 body {
     width: 100%;
     height: 100vh;
+    background-color: black;
 }
 
 #header {
@@ -18,7 +22,7 @@ body {
     width: 100%;
     display:flex;
     background-color: transparent;
-    border-bottom:1px solid black;
+    border-bottom:1px solid rgb(38, 37, 37);
     justify-content: flex-end;
 }
 
@@ -38,7 +42,7 @@ body {
 
 #nav-bar ul a {
     text-decoration: none;
-    color: rgb(64, 66, 224);
+    color: rgb(46, 95, 229);
     font-size: 2rem;
 
 }
