--- a/styles.css
+++ b/styles.css
@@ -56,4 +56,21 @@ body {
 .section {
     height: 100vh;
     padding-top: 50px;
+    display: grid;
+    align-items:center;
+    justify-content: center;
+}
+
+.container {
+    padding:3rem;
+    background-color: var(--header-color);
+    border-radius: 1rem;
+}
+
+#welcome-section #name {
+    font-size: 6rem;
+}
+
+#welcome-section #job-title {
+    font-size: 2.6rem;
 }
