--- a/styles.css
+++ b/styles.css
@@ -56,15 +56,18 @@ body {
 .section {
     height: 100vh;
     padding-top: 50px;
-    display: grid;
+    display: flex;
+    flex-direction: row;
     align-items:center;
     justify-content: center;
 }
 
+
+
 .container {
     padding:3rem;
     background-color: var(--header-color);
-    border-radius: 1rem;
+    border-radius: 2rem;
 }
 
 #welcome-section #name {
@@ -73,4 +76,28 @@ body {
 
 #welcome-section #job-title {
     font-size: 2.6rem;
+}
+
+#information-section {
+    justify-content: space-evenly;
+    align-items: baseline;
+}
+
+#information-section .accordion-title {
+    font-size: 3rem;
+}
+
+#information-section .accordion-text {
+    padding-top:2rem;
+    font-size: 1.8rem;
+}
+
+#information-section .accordion-text p {
+    padding-top:0.5rem;
+}
+
+#information-section .accordion-title::after {
+    content:"+";
+    margin-left:4rem;
+    cursor:pointer;
 }
