--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ body {
     background-color: black;
 }
 
+/* nav-bar */
+
 #header {
     position: fixed;
     width: 100%;
@@ -33,7 +35,7 @@ body {
 }
 
 #nav-bar {
-    width: 40%;
+    width: 50%;
    
     
 }
@@ -53,6 +55,9 @@ body {
 
 }
 
+
+/* main */
+
 .section {
     height: 100vh;
     padding-top: 50px;
@@ -63,7 +68,7 @@ body {
 }
 
 
-
+/* welcome page */
 .container {
     padding:3rem;
     background-color: var(--header-color);
@@ -77,6 +82,9 @@ body {
 #welcome-section #job-title {
     font-size: 2.6rem;
 }
+
+
+/* information page */
 
 #information-section {
     justify-content: space-evenly;
@@ -106,7 +114,6 @@ body {
     padding-top:0.5rem;
 }
 
-/* Javascript expansion */
 
 #information-section .active {
     padding-top:2rem;
@@ -115,4 +122,16 @@ body {
 
 #information-section .minus::after{
     content:'-';
+}
+
+
+/* Contact-section */
+#contact-section {
+    flex-direction: column;
+}
+#contact-header {
+    font-size: 5rem;
+    display: flex;
+    justify-self: flex-start;
+    align-self: flex-start;
 }
