--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,14 @@ html {
     box-sizing: border-box;
     font-family: 'Roboto Mono', monospace;
     color: white;
+    scroll-behavior: smooth;
 }
 
 body {
     width: 100%;
     height: 100vh;
     background-color: black;
+    perspective: 1000px;
 }
 
 /* nav-bar */
@@ -73,6 +75,7 @@ body {
     padding:3rem;
     background-color: var(--header-color);
     border-radius: 2rem;
+    
 }
 
 #welcome-section #name {
@@ -94,6 +97,7 @@ body {
 #information-section .accordion-title {
     font-size: 3rem;
     cursor: pointer;
+    
 }
 
 #information-section .accordion-title::after {
@@ -128,10 +132,61 @@ body {
 /* Contact-section */
 #contact-section {
     flex-direction: column;
+    display: relative;
+    justify-content: flex-start;
+    align-items: center;
+    
 }
 #contact-header {
     font-size: 5rem;
-    display: flex;
-    justify-self: flex-start;
-    align-self: flex-start;
+    text-align: center;
 }
+
+#contact-section .wide-container {
+    width: 100%;
+    margin-top: 15rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#contact-section .wide-container .icon-container {
+    z-index: 2;
+    transform-style: preserve-3d;
+    box-shadow: 0px 10px 20px rgb(3, 2, 88);
+    perspective: 500px;
+}
+
+#contact-section .wide-container .icon {
+    font-size: 10rem;
+    z-index: 3;
+    pointer-events: none;
+    
+
+    
+    
+}
+
+.hidden {
+    opacity: 0;
+    transform: translateX(-100%);
+    filter: blur(10px);
+    transition: all 1s;
+    
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0px);
+    transform: translateX(0%);
+    
+}
+
+@media (prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
+}
+
+
+
+
