--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: black;
-    perspective: 1000px;
+    
 }
 
 /* nav-bar */
@@ -30,6 +30,7 @@ body {
 #header {
     position: fixed;
     top:0;
+    left:0;
     width: 100%;
     display:flex;
     background-color: var(--header-color);
