--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: black;
-    
+
 }
 
 /* nav-bar */
@@ -30,7 +30,7 @@ body {
 #header {
     position: fixed;
     top:0;
-    left:0;
+    
     width: 100%;
     display:flex;
     background-color: var(--header-color);
@@ -62,9 +62,10 @@ body {
 
 /* main */
 
+
 .section {
-    height: 100vh;
-    padding-top: 50px;
+    height: 100vh !important;
+    padding-top: 50px !important;
     display: flex;
     flex-direction: row;
     align-items:center;
@@ -79,9 +80,23 @@ body {
     border-radius: 2rem;
     
 }
+#welcome-section {
+    
+}
+
+#welcome-section #name-container {
+    position: sticky;
+    max-width: 500px;
+    margin-top: 5rem;
+    top:5rem;
+    z-index: -1;
+    
+    
+}
 
 #welcome-section #name {
     font-size: 6rem;
+    
 }
 
 #welcome-section #job-title {
