--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 @import '_resets';
+@import '_mixins.scss';
+@import '_colors.scss';
 
-:root {
-    --blue-color: rgb(46, 95, 229);
-    --header-color: rgb(23, 24, 23);
-}
 
 
 body {
@@ -19,18 +17,15 @@ body {
 #header {
     position: fixed;
     top:0;
-    
     width: 100%;
     display:flex;
-    background-color: var(--header-color);
+    background-color: $header-color;
     border-bottom:1px solid rgb(38, 37, 37);
     justify-content: flex-end;
 }
 
 #nav-bar {
     width: 50%;
-   
-    
 }
 
 #nav-bar ul {
@@ -43,7 +38,7 @@ body {
 
 #nav-bar ul a {
     text-decoration: none;
-    color: var(--blue-color);
+    color: $blue-color;
     font-size: 2rem;
 
 }
@@ -65,7 +60,7 @@ body {
 /* welcome page */
 .container {
     padding:3rem;
-    background-color: var(--header-color);
+    background-color: $header-color;
     border-radius: 2rem;
     
 }
@@ -115,7 +110,7 @@ body {
     font-size: 1.8rem;
     overflow: hidden;
     height: 0px;
-    transition: 0.5s;
+    @include trans-all-ease;
 }
 
 #information-section .accordion-text p {
@@ -157,8 +152,8 @@ body {
 #contact-section .wide-container .icon-container {
     z-index: 2;
     transform-style: preserve-3d;
-    box-shadow: 0px 10px 20px var(--blue-color);
-    transition: all 0.5s ease;
+    box-shadow: 0px 10px 20px $blue-color;
+    @include trans-all-ease;
     border: 10px solid transparent;
     
 }
@@ -167,7 +162,7 @@ body {
     font-size: 10rem;
     z-index: 3;
     pointer-events: none;
-    color: var(--blue-color);
+    color: $blue-color;
     
 
     
