--- a/sass/style.scss
+++ b/sass/style.scss
@@ -91,19 +91,20 @@ body {
 #information-section {
     justify-content: space-evenly;
     align-items: baseline;
+
+    .accordion-title {
+        font-size: 3rem;
+        cursor: pointer;
+
+        &::after {
+            content:"+";
+            margin-left:4rem;
+            cursor:pointer;
+        }
+    }
+
 }
 
-#information-section .accordion-title {
-    font-size: 3rem;
-    cursor: pointer;
-    
-}
-
-#information-section .accordion-title::after {
-    content:"+";
-    margin-left:4rem;
-    cursor:pointer;
-}
 
 
 #information-section .accordion-text {
@@ -111,10 +112,10 @@ body {
     overflow: hidden;
     height: 0px;
     @include trans-all-ease;
-}
 
-#information-section .accordion-text p {
-    padding-top:0.5rem;
+    p {
+        padding-top:0.5rem;
+    }
 }
 
 
