--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,6 @@ html {
   scroll-behavior: smooth;
 }
 
-:root {
-  --blue-color: rgb(46, 95, 229);
-  --header-color: rgb(23, 24, 23);
-}
-
 body {
   width: 100%;
   height: 100vh;
@@ -29,7 +24,7 @@ body {
   top: 0;
   width: 100%;
   display: flex;
-  background-color: var(--header-color);
+  background-color: rgb(23, 24, 23);
   border-bottom: 1px solid rgb(38, 37, 37);
   justify-content: flex-end;
 }
@@ -48,7 +43,7 @@ body {
 
 #nav-bar ul a {
   text-decoration: none;
-  color: var(--blue-color);
+  color: rgb(46, 95, 229);
   font-size: 2rem;
 }
 
@@ -65,15 +60,12 @@ body {
 /* welcome page */
 .container {
   padding: 3rem;
-  background-color: var(--header-color);
+  background-color: rgb(23, 24, 23);
   border-radius: 2rem;
 }
 
 #welcome-section #name-container {
-  position: sticky;
   max-width: 500px;
-  margin-top: -20rem;
-  top: 3rem;
   z-index: -1;
 }
 
@@ -90,12 +82,10 @@ body {
   justify-content: space-evenly;
   align-items: baseline;
 }
-
 #information-section .accordion-title {
   font-size: 3rem;
   cursor: pointer;
 }
-
 #information-section .accordion-title::after {
   content: "+";
   margin-left: 4rem;
@@ -106,9 +96,8 @@ body {
   font-size: 1.8rem;
   overflow: hidden;
   height: 0px;
-  transition: 0.5s;
+  transition: all 0.5s ease;
 }
-
 #information-section .accordion-text p {
   padding-top: 0.5rem;
 }
@@ -146,7 +135,7 @@ body {
 #contact-section .wide-container .icon-container {
   z-index: 2;
   transform-style: preserve-3d;
-  box-shadow: 0px 10px 20px var(--blue-color);
+  box-shadow: 0px 10px 20px rgb(46, 95, 229);
   transition: all 0.5s ease;
   border: 10px solid transparent;
 }
@@ -155,7 +144,7 @@ body {
   font-size: 10rem;
   z-index: 3;
   pointer-events: none;
-  color: var(--blue-color);
+  color: rgb(46, 95, 229);
 }
 
 .hidden {
