--- a/sass/style.scss
+++ b/sass/style.scss
@@ -60,8 +60,12 @@ body {
 
 .sub-header{
     z-index: -1;
-    font-size: 5rem;
+    font-size: 6.5rem;
     text-align: center;
+}
+
+#about-header {
+    margin-bottom: 2rem;
 }
 
 
@@ -75,8 +79,6 @@ body {
 #welcome-section #name-container {
     max-width: 500px;
     z-index: -1;
-    
-    
 }
 
 #welcome-section #name {
@@ -97,6 +99,15 @@ body {
     justify-content: space-evenly;
     align-items: baseline;
 
+    article {
+
+        p {
+           text-indent: 1rem;
+            font-size: 2rem;
+            line-height: 3.5rem;
+        }
+    }
+
     .accordion {
         border-radius: determine-border-radius(-1);
     }
@@ -114,11 +125,14 @@ body {
         font-size: 3rem;
         cursor: pointer;
         padding-bottom: 0.5rem;
+        position: relative;
 
         &::after {
             content:"+";
             margin-left:4rem;
             cursor:pointer;
+            position:absolute;
+            right:0;
         }
     }
 
