feat: basic structure project cards

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,3 +1,9 @@
 @mixin trans-all-ease {
     transition: all 0.5s ease;
 }
+
+@mixin flex($direction, $wrap) {
+    display: flex;
+    flex-direction: $direction;
+    flex-direction: $wrap;
+}
