--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -6,26 +6,36 @@
 
 
     #projects-container {
-        @include flex(column, nowrap);
+     
         width:80%;
         max-width: 1000px;
-        background-color: blue;
-        justify-content: space-between;
+        
 
 
         /*The project-cards*/
         .card {
             width:100%;
             background-color: $header-color;
-
+            margin-bottom: 3rem;
+            
             figure {
                 width: 100%;
                 height: 100%;
                 img {
+                    
                     height: 100%;
                     width: 100%;
                     object-fit: contain;
                 }
+            }
+
+            h1 {
+                text-align: center;
+            }
+
+            article {
+                width: 50%;
+                margin: 2rem auto;
             }
             
         }
