feat: functional project page

--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -1,13 +1,15 @@
 @import '_mixins.scss';
 @import '_colors.scss';
 
+
 #projects-section {
     @include flex(column, nowrap);
 
 
     #projects-container {
-     
-        width:80%;
+        
+        margin-top: 8rem;
+        width:60%;
         max-width: 1000px;
         
 
@@ -29,14 +31,42 @@
                 }
             }
 
+            .description-wrapper {
+                padding:1rem;
+            }
+
             h1 {
                 text-align: center;
+                font-size: 3rem;
             }
 
             article {
                 width: 50%;
                 margin: 2rem auto;
+                font-size: 1.5rem;
             }
+
+            .btn-wrapper {
+                margin-top: 5rem;
+                @include flex(row, wrap);
+                justify-content: space-evenly;
+
+                .proj-btn {
+                    background-color: $blue-color;
+                    width: max-content;
+                    padding:1rem;
+                    border-radius: 1rem;
+                    cursor: pointer;
+                    font-size: 1.2rem;
+                }
+
+                .btn-icon {
+                    margin-left: 1rem;
+                    font-size: 1.5rem;
+                }
+            }
+
+            
             
         }
 
