--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -11,6 +11,8 @@
         margin-top: 8rem;
         width:60%;
         max-width: 1000px;
+      
+        
         
 
 
@@ -19,6 +21,7 @@
             width:100%;
             background-color: $header-color;
             margin-bottom: 3rem;
+            perspective: 50px;
             
             figure {
                 width: 100%;
