--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -10,18 +10,17 @@
         
         margin-top: 8rem;
         width:60%;
+        min-width: 280px;
         max-width: 1000px;
       
         
-        
-
-
         /*The project-cards*/
         .card {
+            font-size: 2rem;
             width:100%;
             background-color: $header-color;
             margin-bottom: 3rem;
-            perspective: 50px;
+            
             
             figure {
                 width: 100%;
@@ -35,7 +34,7 @@
             }
 
             .description-wrapper {
-                padding:1rem;
+                padding:0.1em;
             }
 
             h1 {
@@ -44,28 +43,28 @@
             }
 
             article {
-                width: 50%;
-                margin: 2rem auto;
-                font-size: 1.5rem;
+                width: 80%;
+                margin: 1em auto;
+                font-size: 1em;
             }
 
             .btn-wrapper {
-                margin-top: 5rem;
+                margin-top: 2em;
                 @include flex(row, wrap);
                 justify-content: space-evenly;
 
                 .proj-btn {
                     background-color: $blue-color;
                     width: max-content;
-                    padding:1rem;
-                    border-radius: 1rem;
+                    padding:1em;
+                    border-radius: 1em;
                     cursor: pointer;
-                    font-size: 1.2rem;
+                    font-size: 0.6em;
                 }
 
                 .btn-icon {
-                    margin-left: 1rem;
-                    font-size: 1.5rem;
+                    margin-left: 0.5em;
+                    font-size: 1.5em;
                 }
             }
 
