--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,7 @@
 @import '_functions.scss';
 @import '_projects.scss';
 @import '_animations.scss';
-
+@import '_responsive.scss';
 
 
 body {
@@ -198,7 +198,7 @@ body {
     transform-style: preserve-3d;
     box-shadow: 0px 10px 20px $blue-color;
     @include trans-all-ease;
-    border: 10px solid transparent;
+    
     
 }
 
