--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -102,9 +102,8 @@ body {
     align-items: baseline;
 
     article {
-
+        margin-left: 1rem;
         p {
-           text-indent: 1rem;
             font-size: 2rem;
             line-height: 3.5rem;
         }
