--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,10 +121,20 @@ html {
     margin-left: auto;
     margin-right: auto;
   }
+  #information-section #accordion-container .accordion-title {
+    font-size: 2rem;
+  }
+  #information-section #accordion-container article p {
+    font-size: 1.5rem;
+  }
   #information-section #about-article {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2rem;
+  }
+  #information-section #about-article p {
+    line-height: 2.5rem;
+    font-size: 1.5rem;
   }
   #projects-section .card {
     font-size: 0.4rem;
@@ -141,6 +151,32 @@ html {
   #contact-section .icon {
     padding: 0 !important;
     font-size: 4rem !important;
+  }
+}
+@media screen and (max-width: 550px) {
+  #projects-section .card {
+    font-size: 0.4rem;
+  }
+  #projects-section .card .description-wrapper h1 {
+    font-size: 1em !important;
+  }
+  #projects-section .card .description-wrapper article {
+    font-size: 0.5em !important;
+  }
+}
+@media screen and (max-width: 370px) {
+  #information-section #about-article {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+  }
+  #information-section #about-article p {
+    font-size: 1.1rem;
+  }
+}
+@media screen and (min-width: 700px) and (min-height: 800px) {
+  #projects-section {
+    margin-top: -30%;
   }
 }
 body {
@@ -181,7 +217,7 @@ body {
 
 /* main */
 .section {
-  min-height: 100vh !important;
+  min-height: 100vh;
   padding-top: 50px !important;
   display: flex;
   flex-direction: row;
@@ -287,7 +323,7 @@ body {
 #contact-section {
   flex-direction: column;
   display: relative;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
