--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -40,6 +40,7 @@
             h1 {
                 text-align: center;
                 font-size: 3rem;
+                white-space: pre-wrap;
             }
 
             article {
